p2/confs/test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
  labels:
    app: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: test-pod
  template:
    metadata:
      labels:
        app: test-pod
    spec:
      containers:
        - name: test-container
          image: registry.k8s.io/busybox
          command: [ "sh", "-c"]
          args:
          - while true; do
              echo -en '\n';
              uname -n;
              echo $(uname -s) '('$(uname -r).$(uname -m)')';
              sleep 10;
            done;
