p2/confs/service-one.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-one
  labels:
    app: app-one
spec:
  selector:
    app: app-one
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
