p2/confs/service-three.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-three
  labels:
    app: app-three
spec:
  selector:
    app: app-three
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
