p2/confs/service-two.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-two
  labels:
    app: app-two
spec:
  selector:
    app: app-two
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
